make sure autocomplete dropdowns are always on top in modal dialogs the autocomplet/combobox dropdowns were hidden by the modal overlay. added a css-case preventing this

--- a/css/default.css
+++ b/css/default.css
@@ -340,6 +340,9 @@ ul.plain > li {
 .ui-front {
   z-index:1011;
 }
+.ui-autocomplete.ui-front {
+  z-index:1012;
+}
 body .ui-tooltip {
   opacity:0.8;
   border:0;
